<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_main"
	style="?android:buttonBarStyle" >
	
    <LinearLayout 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:layout_marginLeft="100dp"
		android:orientation="horizontal" >
        
        <Button
		    android:id="@+id/btn_about"
		    android:layout_width="110dp"
		    android:layout_height="110dp"		    
		    android:background="@drawable/button_sky2red_ring"
		    android:onClick="onAboutButtonClicked"
		    android:text="@string/button_about"
		    android:textStyle="bold"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		     />
        
        <Button
		    android:id="@+id/btn_video_medicine"
		    android:layout_width="100dp"
		    android:layout_height="100dp"
		    android:layout_marginTop="-10dp"
		    android:layout_marginLeft="5dp"
		    android:background="@drawable/button_atlantis_oval"
		    android:onClick="onVideoMedicineButtonClicked"
		    android:text="@string/button_video_medicine"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		     />
	
		<Button
		    android:id="@+id/btn_video_famewealth"
		    android:layout_width="100dp"
		    android:layout_height="100dp"
		    android:layout_marginTop="-10dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/button_red_oval"
		    android:onClick="onVideoFamewealthButtonClicked"
		    android:text="@string/button_video_famewealth"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		     />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="160dp"
		android:layout_marginLeft="155dp"
		android:gravity="center"
		android:orientation="horizontal" >
		
        <Button
		    android:id="@+id/btn_abook"
		    android:layout_width="100dp"
		    android:layout_height="100dp"
		    android:background="@drawable/button_orange_oval"
		    android:onClick="onAbookButtonClicked"
		    android:text="@string/button_abook"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		     />
	
		<Button
		    android:id="@+id/btn_library"
		    android:layout_width="100dp"
		    android:layout_height="100dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/button_sky_oval"
		    android:onClick="onLibraryButtonClicked"
		    android:text="@string/button_library"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		     />
        
    </LinearLayout>
    
	<Button
	    android:id="@+id/btn_homepage"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="56dp"
	    android:layout_marginLeft="160dp"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:onClick="onHomepageButtonClicked"
	    android:text="@string/button_homepage"
	    android:background="#95D553"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>